@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution HTML-StickyForm,
-version 0.07_01:
+version 0.07_02:
 
   Lightweight general-purpose HTML form generation, with sticky values
 
