@@ -1,5 +1,5 @@
 name	= HTML-StickyForm
-version	= 0.07_01
+version	= 0.07_02
 copyright_holder	= IOP Publishing Ltd
 
 [@Basic]
