@@ -1,3 +1,6 @@
+2011-10-18 0.07_02 Preview release of improvements to select():
+  Add option group capability
+
 2011-10-08 0.07_01 Preview release of improvements to radio_group():
   Per-value attribute values can now be passed as hashrefs
   New radio() method for generating a single radio button
